NATTQA-ENV/force-app/main/default/objects/NATT_Alert__c/NATT_Alert__c.object-meta.xml
<CustomObject>
    <label>NATT Alert</label>
    <nameField>
        <label>NATT Alert Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NATT Alerts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>