NATTQA-ENV/force-app/main/default/objects/NATT_Alert__c/fields/NATT_AlertText__c.field-meta.xml
<CustomField>
    <fullName>NATT_AlertText__c</fullName>
    <label>Alert</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>