NATTQA-ENV/force-app/main/default/objects/NATT_Alert__c/fields/NATT_End_Date__c.field-meta.xml
<CustomField>
    <fullName>NATT_End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>