NATTQA-ENV/force-app/main/default/objects/NATT_Alert__c/fields/NATT_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>NATT_Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>