NATTQA-ENV/force-app/main/default/objects/NATT_Alert__c/recordTypes/Container_Alert.recordType-meta.xml
<RecordType>
    <fullName>Container_Alert</fullName>
    <active>true</active>
    <label>Container Alert</label>
</RecordType>