NATTQA-ENV/force-app/main/default/objects/NATT_Alert__c/recordTypes/CTBR_Alerts.recordType-meta.xml
<RecordType>
    <fullName>CTBR_Alerts</fullName>
    <active>true</active>
    <description>CTBR Alerts</description>
    <label>CTBR Alerts</label>
</RecordType>