NATTQA-ENV/force-app/main/default/objects/NATT_Alert__c/recordTypes/MX_Alerts.recordType-meta.xml
<RecordType>
    <fullName>MX_Alerts</fullName>
    <active>true</active>
    <label>CTM Alerts</label>
</RecordType>