NATTQA-ENV/force-app/main/default/objects/NATT_Alert__c/recordTypes/NATT_Alerts.recordType-meta.xml
<RecordType>
    <fullName>NATT_Alerts</fullName>
    <active>true</active>
    <label>NATT Alerts</label>
</RecordType>