NATTQA-ENV/force-app/main/default/objects/NATT_Alert__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>NATT_Start_Date__c</columns>
    <columns>NATT_End_Date__c</columns>
    <columns>NATT_AlertText__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>